--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto-slab": "^5.2.5",
     "@tailwindcss/vite": "^4.0.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.4.0",
+    "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
